debug layout issue 'style selector'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,7 @@ body, html {
     z-index: 99; 
     top: 5px;
     right: 15px;
+    height: 400px;
 }
 
 .transbox p {
@@ -401,7 +402,8 @@ body, html {
   display: none;
 }
 .inn-preview p {
-  margin-left: 20px; 
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
 
 .inn-preview.active {
